Rerender resume page

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -20,7 +20,7 @@ website:
       - text: "Research"
         href: research.qmd
       - text: "Resume"
-        href: resume/index.qmd
+        href: resume.qmd
       - text: "Teaching"
         href: teaching.qmd
     right:
